RESOLVED FIXED28762
HTMLMediaElement sometimes loses events
https://bugs.webkit.org/show_bug.cgi?id=28762
Summary HTMLMediaElement sometimes loses events
Eric Carlson
Reported 2009-08-26 17:18:38 PDT
A 'play' event listener is not triggered when an audio element with "new Audio()" and play() is called immediately: audio = new Audio(); audio.addEventListener('play', function() {alert('play');}, false); audio.src = 'audio.mp3'; audio.play();
Attachments
proposed patch (9.15 KB, patch)
2009-08-26 17:27 PDT, Eric Carlson
simon.fraser: review+
Eric Carlson
Comment 1 2009-08-26 17:19:58 PDT
Eric Carlson
Comment 2 2009-08-26 17:27:38 PDT
Created attachment 38651 [details] proposed patch
Simon Fraser (smfr)
Comment 3 2009-08-26 17:34:33 PDT
Comment on attachment 38651 [details] proposed patch > Index: WebCore/ChangeLog > =================================================================== > + Reviewed by NOBODY (OOPS!). > + > + HTMLMediaElement sometimes loses events > + https://bugs.webkit.org/show_bug.cgi?id=28762 > + <rdar://problem/7172437> > + You should say what you changed and why (give the gist of the fix here). r=me
Eric Carlson
Comment 4 2009-08-26 17:49:21 PDT
Note You need to log in before you can comment on or make changes to this bug.